--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,11 @@
 
 // Bootstrap
 @import '~admin-lte/build/scss/adminlte';
+
+// Fontawesome
+$fa-font-path: "../webfonts";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+
